# quantoxide

./: .env.template  .gitignore  Cargo.toml  QUICKSTART_PROMPT.md  README.md  docker-compose.yml  rustfmt.toml
analysis/: Cargo.toml  dockerfile
analysis/.cargo/: config.toml
analysis/.sqlx/: query-0e37688905edfca4fbe08e55f6ace9e27c18b95573e6d5664f1aba00be9855b0.json  query-1062357434759b9dbb6d777bc04821440ebae6da3cd3775eb0fd78e863cf126a.json  query-198867a40e391b5690c2cbcc5a8cbe2924d400b0891ae4f888e40507eb15f983.json  query-1e321756a5e525764fa6094d0990a487ef043366c4501aee0389011c7cd9af80.json  query-276b94a39af3811d670f9c6168d5c3f0ddc99c61643425545d4f73e2dfc12bc2.json  query-3139dae4933fe26a8988f0cd0dcb49cb4f95cd5e61d099c4d5d79e7aded768dc.json  query-47b6abb82aba899e25c573dde84385fcd402a41a6983451e8dbe4867e5282270.json  query-4aa4fce1d9e72780e2a6f17cb085903d7bf974be05a111170868d03e8ee64e3d.json  query-8acfc0191119bd99fe297a82c88b019d9ab6115fb33f7e6a526c236c9bd16038.json  query-b09111450324485596cfeb9b77d89d7e4a0bdd88bb6642a3a02724553d2acd07.json  query-c8a1c2e9e32afd9044536f3f37a03bfc82087b0787b119b39cbcbf62712132ea.json  query-cdc8d58880385bb0a70245ff83b0d74036d330e03afd29ad049162e93690c508.json  query-e09d5284a34ca5716faf2913a0d3e63b33793af63a81ba10a36d61d3385f9783.json
analysis/migrations/: 20250306133036_create_price_history_table.sql  20250308120134_create_price_history_table.sql  20250308151749_create_price_history_table.sql  20250309201627_create_price_history_table.sql  20250311161617_create_price_history_locf_view.down.sql  20250311161617_create_price_history_locf_view.up.sql  20250311235602_create_price_history_locf_mv.down.sql  20250311235602_create_price_history_locf_mv.up.sql  20250312002411_create_price_history_locf_table.down.sql  20250312002411_create_price_history_locf_table.up.sql  20250313114242_alter_price_history_table.down.sql  20250313114242_alter_price_history_table.up.sql  20250313125516_alter_price_history_table.down.sql  20250314143308_create_indicators_table.down.sql  20250314143308_create_indicators_table.up.sql  20250317140406_alter_price_history_locf_table.down.sql  20250317140406_alter_price_history_locf_table.up.sql  20250406132409_create_price_history_table_partial_index.up.sql  20250412194517_create_price_ticks_table.up.sql
analysis/src/: api.rs  db.rs  env.rs  error.rs  lib.rs  main.rs  sync.rs
lnm-sdk/: Cargo.toml  README.md
lnm-sdk/docs/: api-v2-implementation.md  api-v3-implementation.md
lnm-sdk/examples/: README.md  v2_rest_auth.rs  v2_rest_public.rs  v2_ws.rs  v3_rest_auth.rs  v3_rest_public.rs
lnm-sdk/src/: lib.rs
quantoxide/: Cargo.toml  Dockerfile
quantoxide/.sqlx/: query-00bdd2d8d0470f766463dd6a7d45832fce95743e12b9daf621e4d116b2a4beb5.json  query-0962fc588ff3092fa18396b78cd29baac562eddec106e6f33845fbe2ef055517.json  query-0c795fa1176e5de9996272b1977377982ca90db9360ac4d2bf58eb61b969ccc7.json  query-11809b81b912faf19d18f9d2e248ef8d58c71dbbe24a14aa9e8fc25902da2c18.json  query-1470269a7ed4c2dd777a41aba4a813283d96f9889d0ca1380c6d3873b6151f10.json  query-14d22d0731d9cf006c1ec12d6c8cd1fee3dca31f3fb541ed5bf6aaf2a31cacd8.json  query-217212a9db9fa544f497540a57cfd0f6da8fe1f10b98bf9e3bb313dce8434360.json  query-24bfb3bb4c44bb29efb4e60aedf355e6f72ea8117974bb5002d3fd4132565ef5.json  query-26b53d3a191b160a6114309c3602e722bf77562f49638a539b7c411bdb34c6f4.json  query-27139a458830ac4db8ae0d078e613b1f753211e68e34505754bca6ce4a0c6b1c.json  query-28b23ff6ea69036d73b8cc0ce95f0d7b11e9c46232e11ae126a22a5065aeca1a.json  query-356267755890b45a531e4ac78541bf70f372db50e018660005731ded19b8c90f.json  query-35f70857e88d7ea9d9603d17d01006b4c91bf926a436d43d25e94ac9c196e7a4.json  query-38dc9c8c07c31b7b2ca45b41bff22b31e4d2ec92b987c554f8a4185331c47768.json  query-4578df1814d227b95e324f8e5830aea9cace5e95978d4da7b6887b885465e4ee.json  query-4df4e3a623b8254b3e44d4e9f9f4008a4e1261c981524c60be9769469f3d4800.json  query-4e1eec1b5f0d6995fededf9c00924f24db6368fc1fab2a1c5240f1743c9c8d3a.json  query-52996523ce1e8e99a405b64966558c43a6cffc831b60c2898eeea91ec817768f.json  query-5599030d837b2ac5f039c995e7dbb0e861419ae46a6b8b76a31efc0518bcb832.json  query-560d26d105eba1d7723ce9f2118abf8f7f49a94571bae1e737608c8ec0238356.json  query-5fb0b7e638dcd64bfa794c0c9a2fff16ee161c99ff6f3dccc0103d9c3e808456.json  query-6112a2db69f07857b45370131c314024121f54bd2304304c01a8cbfda6cc278f.json  query-6e63c19a41f7fb458445308f0b363c2decd35f18597b50f0afb1375278fcba32.json  query-7124d0cc15ea7d06fec98f78e0c8995008aa35e67e450ef11595439c3d66127d.json  query-73ca804c1cb9c33d8abcc002b820593a486039deb9d872bf690ecd71695ae3ed.json  query-787914236008f421de5815d1406ea21c3abd1f6f892287129def6c59ee5b4e4f.json  query-793e5a67c1156dd95e6290e2f63260470dcb04406cd7fcafaccc4b5fc016d37b.json  query-8fff5271eab458f745ccb2e7b27949d7af2575882d45cba4cd381aea24faefa4.json  query-93b0ae5775539f342e9fb49c255fc2c9d5c9ab7b24a0789948eb61c64fc56227.json  query-96772d2e5c9d61bd855437e235e2298e187dfd04ca62f087fe22e87088c3dd9d.json  query-9730b363a7fe2dc3c225b410c900ab1f3c6d682fca5770e25f9ca26661c05421.json  query-a017e5e02cb38be78cf18608e41daa52a92ce2a4f460e932169c9268a34155e5.json  query-a03bd50715b44f7e4966ebef5759029be2faefb8d5c404fbd8f0ec64682b62bf.json  query-a130df932d87039436db8bf8bd13fade50a9324fe072e3cf39655bd3c16bd383.json  query-a1f994b1c3b81305338e42b7cf2dad099b617c24ea76e25610467f7c2e2eddcd.json  query-b1f8356c53f5bded06fbeb09c00836b2354c0cf4a3357ceb2eaa3689bc382535.json  query-b34d2ee6572191b58f24a3af53f390cc6ae100e55f0545ca0b9b0c4702e02d4f.json  query-b3eefa861fb1cb960c5af8f192d4e9a68b16ee4b238645e521c69e04ac16d6dc.json  query-b78e306f4a583fa4c19e76b4ed34086c87968a12de6485a822a07e4afea9924a.json  query-b93b86e465b385bb5553488d84698f3c221b16ea3225e795fa2c1fe19210a23d.json  (+20 more)
quantoxide/examples/: README.md  backtest_direct.rs  backtest_raw_tui.rs  backtest_signal_tui.rs  backtest_tui.rs  live_direct.rs  live_raw_tui.rs  live_signal_tui.rs  live_tui.rs  sync_direct.rs  sync_tui.rs
quantoxide/migrations/: 20250311144610_create_price_history_table.down.sql  20250311144610_create_price_history_table.up.sql  (+15 more)
(+446 files in other folders)
