[package]
name = "quantoxide"
version = "0.4.1"
authors = ["Rafael Lemos <contact@flemosr.com>"]
edition = "2024"
rust-version = "1.88"
description = """
Rust framework for developing, backtesting, and deploying Bitcoin futures trading strategies.
"""
documentation = "https://docs.rs/quantoxide"
readme = "README.md"
homepage = "https://github.com/flemosr/quantoxide"
repository = "https://github.com/flemosr/quantoxide"
license = "Apache-2.0"
keywords = ["bitcoin", "backtesting", "algotrading", "futures", "trading"]
categories = ["finance", "simulation", "cryptography::cryptocurrencies"]

[dependencies]
lnm-sdk = "0.3.0"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["now", "serde"] }
futures = "0.3.31"
lazy_static = "1.5.0"
ratatui = "0.29.0"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "migrate",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
thiserror = "2.0.17"
tokio = "1.48.0"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
dotenv = "0.15.0"
serde_json = "1.0.145"
