[package]
name = "quantoxide"
version = "0.5.5"
authors = ["Rafael Lemos <contact@flemosr.com>"]
edition = "2024"
rust-version = "1.94"
description = """
Rust framework for developing, backtesting, and deploying Bitcoin futures trading strategies.
"""
documentation = "https://docs.rs/quantoxide"
readme = "README.md"
homepage = "https://github.com/flemosr/quantoxide"
repository = "https://github.com/flemosr/quantoxide"
license = "Apache-2.0"
keywords = ["bitcoin", "backtesting", "algotrading", "futures", "trading"]
categories = ["finance", "simulation", "cryptography::cryptocurrencies"]

[dependencies]
lnm-sdk = "0.6.0"
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["now", "serde"] }
futures = "0.3.32"
lazy_static = "1.5.0"
ratatui = "0.30.2"
sqlx = { version = "0.9.0", features = [
    "chrono",
    "migrate",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
thiserror = "2.0.18"
tokio = "1.52.3"
uuid = { version = "1.23.4", features = ["serde", "v4"] }
strum = { version = "0.28.0", features = ["derive"] }

[dev-dependencies]
dotenvy = "0.15.7"
serde_json = "1.0.150"
