[package]
name = "analysis"
authors = ["Rafael Lemos <contact@flemosr.com"]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "migrate",
] }
chrono = { version = "0.4.40", features = ["serde", "now"] }
serde = "1.0.218"
serde_json = "1.0.140"
lazy_static = "1.5.0"
