[package]
name = "lnm-sdk"
authors = ["Rafael Lemos <contact@flemosr.com"]
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
publish = false

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["now", "serde"] }
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
hex = "0.4.3"
hmac = "0.12.1"
http-body-util = "0.1.3"
hyper = "1.6.0"
hyper-util = { version = "0.1.11", features = ["tokio"] }
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = "0.26.2"
uuid = { version = "1.16.0", features = ["serde"] }
webpki-roots = "0.26.8"

[dev-dependencies]
dotenv = "0.15.0"
