[package]
name = "lnm-sdk"
version = "0.1.0"
authors = ["Rafael Lemos <contact@flemosr.com"]
edition = "2024"
rust-version = "1.88"
license = "UNLICENSED"
publish = false

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["now", "serde"] }
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
hex = "0.4.3"
hmac = "0.12.1"
http-body-util = "0.1.3"
hyper = "1.8.1"
hyper-util = { version = "0.1.19", features = ["tokio"] }
rand = "0.9.2"
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
webpki-roots = "1.0.4"

[dev-dependencies]
dotenv = "0.15.0"
