[package]
name = "quantoxide"
authors = ["Rafael Lemos <contact@flemosr.com"]
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
publish = false

[dependencies]
lnm-sdk = { path = "../lnm-sdk" }
chrono = { version = "0.4.40", features = ["now", "serde"] }
lazy_static = "1.5.0"
sqlx = { version = "0.8.3", features = [
    "chrono",
    "migrate",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
thiserror = "2.0.12"
tokio = "1.44.2"
async-trait = "0.1.88"
futures = "0.3.31"
uuid = { version = "1.16.0", features = ["serde"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
strum = { version = "0.27.1", features = ["derive"] }
